log/build_2026-02-20_16-58-07/mobile_robot/stderr.log
  File "/home/russe/Autonomous_Robot/install/mobile_robot/lib/python3.12/site-packages/mobile_robot/find.py", line 36
    self.logger().info(
                      ^
SyntaxError: '(' was never closed

